[project]
name = "influencer"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "simpleobsws>=1.4.0,<2",
    "av>=11.0.0,<12",
    "imutils>=0.5.4,<0.6",
    "python-vlc>=3.0.20123,<4",
    "yolov4>=3.2.0,<4",
    "tensorflow>=2.16.1,<3",
    "opencv-python>=4.9.0.80,<5",
    "tf-keras>=2.16,<3.0",
    "tqdm>=4.66.2,<5",
    "pyyaml>=6.0.1,<7",
    "pycoral>=2.0.0,<3",
    "aiohttp>=3.11.11",
    "aiomqtt>=2.3.0",
]

[tool.uv]

[[tool.uv.index]]
name = "pycoral"
url = "https://google-coral.github.io/py-repo/"

[tool.uv.sources]
pycoral = { index = "pycoral" }
