[project]
name = "influencer"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "aiohttp>=3.11.11",
    "aiomqtt>=2.3.0",
    "asyncio>=3.4.3",
    "ffmpeg-python>=0.2.0",
    "mediapipe>=0.10.14",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "pygobject>=3.50.0",
    "simpleobsws>=1.4.2",
]

[tool.uv]

[[tool.uv.index]]
name = "pycoral"
url = "https://google-coral.github.io/py-repo/"
